python/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "fastapi.domain-to-test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-demo-service
            port:
              number: 8000
